--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <!-- ===== Home Section  ===== -->
 <section id="home" class="about">
   <div class="about-container">
-    <img src="img/img1.jpg" alt="Profile Picture">
+    <img src="img/img1.webp" alt="Profile Picture">
 
     <div class="info-box">
       <div class="text">
